--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
     <title>BetterPD</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
   	<script type="text/javascript" src="js/main.js"></script>
