--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   	<script type="text/javascript" src="js/main.js"></script>
   </head>
   <body>
-    <p>Hello World! BOY</p>
+    <p>Hello World! BOYCOOL</p>
   </body>
 </html>
