--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
   	<script type="text/javascript" src="js/main.js"></script>
   </head>
   <body>
-<<<<<<< HEAD
-    <p>Hello World! </p>
-=======
-    <p>Hello World!</p>
->>>>>>> b9ea780312b16351c8ef33f488d8ce24a5629fe7
+    <p>Hello World! COOL</p>
   </body>
 </html>
