Added title and nav bar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   	<script type="text/javascript" src="js/main.js"></script>
   </head>
   <body>
-    <p>Hello World! COOL</p>
+    <img src="img/title.png" alt="BetterPD" class="title">
+    <div class="navbardiv">
+      <ul class="navbar">
+        <li><a href="">Interviews</a></li>
+        <li><a href="">Resume/Cover Letter</a></li>
+        <li><a href="">Big 5</a></li>
+        <li><a href="">Employer Input</a></li>
+        <li><a href="">About</a></li>
+      </ul>
+    </div>
   </body>
 </html>
