Made dropdown menu for Big5 and Interviews.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,26 @@
     <img src="img/title.png" alt="BetterPD" class="title">
     <div class="navbardiv">
       <ul class="navbar">
-        <li><a href="">Interviews</a></li>
         <li><a href="">Resume/Cover Letter</a></li>
-        <li><a href="">Big 5</a></li>
+        <div class = "dropdownInterviews">
+          <button class = "dropbtnInterviews">Interviews </button>
+          <div class = "dropdown-contentInterviews">
+            <a href = "#">Quiz </a>
+            <a href = "#">All Questions</a>
+          </div>
+        </div>
+
+        <div class = "dropdown">
+          <button class = "dropbtn">Big 5 </button>
+          <div class = "dropdown-content">
+            <a href = "#">Amazon </a>
+            <a href = "#">Apple</a>
+            <a href = "#">Facebook </a>
+            <a href = "#">Google </a>
+            <a href = "#">Microsoft </a>
+          </div>
+        </div>
+
         <li><a href="">Employer Input</a></li>
         <li><a href="">About</a></li>
       </ul>
