Created Introduction, Resources, Newsletter sections using flex-container. Also implemented footer. Will add template text later.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <img src="img/title.png" alt="BetterPD" class="title">
+
     <div class="navbardiv">
       <ul class="navbar">
         <li><a href="">Resume/Cover Letter</a></li>
@@ -33,5 +34,31 @@
         <li><a href="">About</a></li>
       </ul>
     </div>
+
+ <div class = "flex-container">
+    <div class = "introduction">
+      <header>
+        <h1>Introduction</h1>
+      </header>
+    </div>
+
+    <div class = "resources">
+      <header>
+        <h1>Resources</h1>
+      </header>
+    </div>
+
+    <div class = "newsletter">
+      <header>
+        <h1>Newsletter</h1>
+      </header>
+    </div>
+ </div>
+
+ <div class = "footer">
+   <p>Footer Placeholder</p>
+ </div>
+
   </body>
+
 </html>
