made files for navigation and links

--- a/employer-input.html
+++ b/employer-input.html
@@ -3,6 +3,7 @@
 <head>
   <title>BetterPD</title>
   <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="css/employer-input.css">
   <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
@@ -11,7 +12,7 @@
   <div class="navbardiv">
     <ul class="navbar">
       <li>
-        <div class="dropdown">
+        <div id="interviewslink" class="dropdown">
           <a href="interviews.html" class="navlink">Interviews</a>
           <div class="dropdown-content">
             <a href="#">Quiz </a>
@@ -20,11 +21,11 @@
         </div>
       </li>
 
-      <li><a href="resume-cover-letter.html" class="navlink">Resume/Cover Letter</a></li>
+      <li><a id="resumelink" href="resume-cover-letter.html" class="navlink">Resume/Cover Letter</a></li>
 
       <li>
         <div class="dropdown">
-          <a href="big-5.html" class="navlink">Big 5</a>
+          <a id="big5link" href="big-5.html" class="navlink">Big 5</a>
           <div class="dropdown-content">
             <a href="#">Amazon </a>
             <a href="#">Apple</a>
@@ -35,31 +36,13 @@
         </div>
       </li>
 
-      <li><a href="employer-input.html" class="navlink">Employer Input</a></li>
+      <li><a id="employerlink" href="employer-input.html" class="navlink">Employer Input</a></li>
 
-      <li><a href="about.html" class="navlink">About</a></li>
+      <li><a id="aboutlink" href="about.html" class="navlink">About</a></li>
     </ul>
   </div>
 
-  <div class="flex-container">
-    <div class="introduction">
-      <header>
-        <h1>Introduction</h1>
-      </header>
-    </div>
-
-    <div class="resources">
-      <header>
-        <h1>Resources</h1>
-      </header>
-    </div>
-
-    <div class="newsletter">
-      <header>
-        <h1>Newsletter</h1>
-      </header>
-    </div>
-  </div>
+  <!-- CONTENT GOES HERE -->
 
   <div class="footer">
     <p>Footer Placeholder</p>
