Added sidebar nav to big-5. Rough design.

--- a/big-5.html
+++ b/big-5.html
@@ -41,7 +41,14 @@
       <li><a id="aboutlink" href="about.html" class="navlink">About</a></li>
     </ul>
   </div>
-
+  <div class="sidenav">
+  <a href="#">Amazon</a>
+  <a href="#">Apple</a>
+  <a href="#">Facebook</a>
+  <a href="#">Google</a>
+  <a href="#">Microsoft</a>
+</div>
+  </div>
   <!-- CONTENT GOES HERE -->
 
   <div class="footer">
