resume cover letter + imgs

--- a/resume-cover-letter.html
+++ b/resume-cover-letter.html
@@ -42,7 +42,49 @@
     </ul>
   </div>
 
-  <!-- CONTENT GOES HERE -->
+  <div class="content">
+    <div class="resume">
+      <div class="resume_text">
+        <h1>Resume</h1>
+        <h3>What is a resume?</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id dui odio. In consectetur est lectus, a pellentesque nunc placerat ut. Etiam fringilla at quam eu molestie. Donec sodales ligula ornare aliquet fermentum. In bibendum fermentum felis, in iaculis diam facilisis vel. Donec non ante gravida nisl condimentum mattis eu eu lorem. Proin at diam et mauris euismod fermentum. Pellentesque elementum dui metus, quis facilisis dui condimentum eu.</p>
+        <h3>What are the key elements?</h3>
+        <ul>
+          <li>One</li>
+          <li>Two</li>
+          <li>Three</li>
+        </ul>
+        <h3>Why we are not giving a template</h3>
+        <p>Aenean eget ornare lacus. Morbi a ex bibendum dui aliquet porttitor. Integer porttitor a lorem id placerat. Donec ut mi sed mauris tempor malesuada. Maecenas laoreet libero at nunc placerat fermentum. Donec hendrerit erat vitae nisl cursus, pulvinar interdum arcu viverra. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer aliquam sit amet mi nec blandit.</p>
+        <h3>Tips & Considerations</h3>
+        <p>Cras sodales elementum rhoncus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis non dolor a nisl posuere placerat.</p>
+      </div>
+      <div class="resume_example">
+        <img src="img/danny_example_resume.jpg" alt="An example resume">
+      </div>
+    </div>
+
+    <div class="cover_letter">
+      <div class="cover_letter_text">
+        <h1>Cover Letter</h1>
+        <h3>What is a cover letter?</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id dui odio. In consectetur est lectus, a pellentesque nunc placerat ut. Etiam fringilla at quam eu molestie. Donec sodales ligula ornare aliquet fermentum. In bibendum fermentum felis, in iaculis diam facilisis vel. Donec non ante gravida nisl condimentum mattis eu eu lorem. Proin at diam et mauris euismod fermentum. Pellentesque elementum dui metus, quis facilisis dui condimentum eu.</p>
+        <h3>What are the key elements?</h3>
+        <ul>
+          <li>One</li>
+          <li>Two</li>
+          <li>Three</li>
+        </ul>
+        <h3>Our opinion: should you have a cover letter (yes!)</h3>
+        <p>Aenean eget ornare lacus. Morbi a ex bibendum dui aliquet porttitor. Integer porttitor a lorem id placerat. Donec ut mi sed mauris tempor malesuada. Maecenas laoreet libero at nunc placerat fermentum. Donec hendrerit erat vitae nisl cursus, pulvinar interdum arcu viverra. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer aliquam sit amet mi nec blandit.</p>
+        <h3>Tips & Considerations</h3>
+        <p>Cras sodales elementum rhoncus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis non dolor a nisl posuere placerat.</p>
+      </div>
+      <div class="cover_letter_example">
+        <img src="img/danny_example_cover_letter.jpg" alt="An example cover letter">
+      </div>
+    </div>
+  </div>
 
   <div class="footer">
     <p>Footer Placeholder</p>
