--- a/employer-input.html
+++ b/employer-input.html
@@ -42,7 +42,23 @@
     </ul>
   </div>
 
-  <!-- CONTENT GOES HERE -->
+  <div class="content">
+    <div class="input">
+      <h4>Name</h4>
+      <h4>Company, Location</h4>
+      <p>I appreciate when, especially for CS or Eng resumes, there's a sidebar with languages and skills instead of me having to read through all the job experience to figure out if you have the right skillset for the position.</p>
+    </div>
+    <div class="input">
+      <h4>Name</h4>
+      <h4>Company, Location</h4>
+      <p>JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF JUST BE YOURSELF </p>
+    </div>
+    <div class="input">
+      <h4>Name</h4>
+      <h4>Company, Location</h4>
+      <p>You smaht, you loyal</p>
+    </div>
+  </div>
 
   <div class="footer">
     <p>Footer Placeholder</p>
