Added links to Big-5 companies from all other pages.

--- a/big-5.html
+++ b/big-5.html
@@ -27,11 +27,11 @@
         <div class="dropdown">
           <a id="big5link" href="big-5.html" class="navlink">Big 5</a>
           <div class="dropdown-content">
-            <a href="#">Amazon </a>
-            <a href="#">Apple</a>
-            <a href="#">Facebook </a>
-            <a href="#">Google </a>
-            <a href="#">Microsoft </a>
+            <a href="#Amazon">Amazon </a>
+            <a href="#Apple">Apple</a>
+            <a href="#Facebook">Facebook </a>
+            <a href="#Google">Google </a>
+            <a href="#Microsoft">Microsoft </a>
           </div>
         </div>
       </li>
