--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         <div class="dropdown">
           <a href="big-5.html" class="navlink">Big 5</a>
           <div class="dropdown-content">
-            <a href="#">Amazon </a>
-            <a href="#">Apple</a>
-            <a href="#">Facebook </a>
-            <a href="#">Google </a>
-            <a href="#">Microsoft </a>
+            <a href="big-5.html#Amazon">Amazon </a>
+            <a href="big-5.html#Apple">Apple</a>
+            <a href="big-5.html#Facebook">Facebook </a>
+            <a href="big-5.html#Google">Google </a>
+            <a href="big-5.html#Microsoft">Microsoft </a>
           </div>
         </div>
       </li>
