--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
         <div id="interviewslink" class="dropdown">
           <a href="interviews.html" class="navlink">Interviews</a>
           <div class="dropdown-content">
-            <a href="#">Quiz </a>
+            <a id="interviewsFormlink" href="interviewsForm.html"> Quiz </a>
             <a href="#">All Questions</a>
           </div>
         </div>
