--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="dropdown">
           <a href="interviews.html" class="navlink">Interviews</a>
           <div class="dropdown-content">
-            <a href="#">Quiz </a>
+          <a href="interviewsForm.html"> Quiz </a>
             <a href="#">All Questions</a>
           </div>
         </div>
