BIG CHANGES. Added css to interviewsForm.html directly. Was not able to link to interviewsForm.css RIP will work on that.

--- a/interviewsForm.html
+++ b/interviewsForm.html
@@ -3,9 +3,8 @@
 <head>
   <title>BetterPD</title>
   <link rel="stylesheet" type="text/css" href="css/main.css">
-  <link rel="stylesheet" type="text/css" href="css/interviews.css">
+  <link rel="stylesheet" type="text/css" href="css/interviewsForm.css">
   <script type="text/javascript" src="js/main.js"></script>
-  <script type="text/javascript" src="js/interviews.js"></script>
 </head>
 <body>
   <img src="img/title.png" alt="BetterPD" class="title" onclick="goHome()">
@@ -14,7 +13,7 @@
     <ul class="navbar">
       <li>
         <div  class="dropdown">
-          <a id="interviewslink" href="interviews.html" class="navlink">Interviews</a>
+          <a  id="interviewslink" href="interviews.html" class="navlink">Interviews</a>
           <div class="dropdown-content">
             <a id="interviewsFormlink" href="interviewsForm.html"> Quiz </a>
             <a href="#">All Questions</a>
@@ -44,20 +43,20 @@
   </div>
 
   <!-- CONTENT GOES HERE -->
-  <div class = "interviewFormTitle">
-    <h1>How it Works </h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id dui odio. In consectetur est lectus, a pellentesque nunc placerat ut. Etiam fringilla at quam eu molestie. Donec sodales ligula ornare aliquet fermentum. In bibendum fermentum felis, in iaculis diam facilisis vel. Donec non ante gravida nisl condimentum mattis eu eu lorem. Proin at diam et mauris euismod fermentum. Pellentesque elementum dui metus, quis facilisis dui condimentum eu.</p>
-    <h1>Form </h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id dui odio. In consectetur est lectus, a pellentesque nunc placerat ut. Etiam fringilla at quam eu molestie. Donec sodales ligula ornare aliquet fermentum. In bibendum fermentum felis, in iaculis diam facilisis vel. Donec non ante gravida nisl condimentum mattis eu eu lorem. Proin at diam et mauris euismod fermentum. Pellentesque elementum dui metus, quis facilisis dui condimentum eu.</p>
+  <div style="margin-left: 10%; width:80%;" class = "interviewsFormTitle">
+    <h1> How it Works </h1>
+    <p style="margin-bottom: 120px; ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id dui odio. In consectetur est lectus, a pellentesque nunc placerat ut. Etiam fringilla at quam eu molestie. Donec sodales ligula ornare aliquet fermentum. In bibendum fermentum felis, in iaculis diam facilisis vel. Donec non ante gravida nisl condimentum mattis eu eu lorem. Proin at diam et mauris euismod fermentum. Pellentesque elementum dui metus, quis facilisis dui condimentum eu.</p>
+    <h1> Form </h1>
+    <p style="margin-bottom: 120px; ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id dui odio. In consectetur est lectus, a pellentesque nunc placerat ut. Etiam fringilla at quam eu molestie. Donec sodales ligula ornare aliquet fermentum. In bibendum fermentum felis, in iaculis diam facilisis vel. Donec non ante gravida nisl condimentum mattis eu eu lorem. Proin at diam et mauris euismod fermentum. Pellentesque elementum dui metus, quis facilisis dui condimentum eu.</p>
 
-    <div class="form-group">
-        <label for="exampleFormControlSelect1">Example select</label>
+    <div style="margin-bottom: 120px; " class="form-group">
+        <label for="exampleFormControlSelect1">Category Select</label>
         <select class="form-control" id="exampleFormControlSelect1">
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-          <option>5</option>
+          <option>iOS Developer</option>
+          <option>Scrub</option>
+          <option>Scrub</option>
+          <option>Scrub</option>
+          <option>Scrub</option>
         </select>
       </div>
   </div>
