--- a/interviews-form.html
+++ b/interviews-form.html
@@ -3,7 +3,7 @@
 <head>
   <title>BetterPD</title>
   <link rel="stylesheet" type="text/css" href="css/main.css">
-  <link rel="stylesheet" type="text/css" href="css/interviewsForm.css">
+  <link rel="stylesheet" type="text/css" href="css/interviews-form.css">
   <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div  class="dropdown">
           <a  id="interviewslink" href="interviews.html" class="navlink">Interviews</a>
           <div class="dropdown-content">
-            <a id="interviewsFormlink" href="interviewsForm.html"> Quiz </a>
+            <a id="interviews-formlink" href="interviews-form.html"> Quiz </a>
             <a href="#">All Questions</a>
           </div>
         </div>
@@ -43,15 +43,15 @@
   </div>
 
   <!-- CONTENT GOES HERE -->
-  <div style="margin-left: 10%; width:80%;" class = "interviewsFormTitle">
+  <div class = "interviews-form-title">
     <h1> How it Works </h1>
-    <p style="margin-bottom: 120px; ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id dui odio. In consectetur est lectus, a pellentesque nunc placerat ut. Etiam fringilla at quam eu molestie. Donec sodales ligula ornare aliquet fermentum. In bibendum fermentum felis, in iaculis diam facilisis vel. Donec non ante gravida nisl condimentum mattis eu eu lorem. Proin at diam et mauris euismod fermentum. Pellentesque elementum dui metus, quis facilisis dui condimentum eu.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id dui odio. In consectetur est lectus, a pellentesque nunc placerat ut. Etiam fringilla at quam eu molestie. Donec sodales ligula ornare aliquet fermentum. In bibendum fermentum felis, in iaculis diam facilisis vel. Donec non ante gravida nisl condimentum mattis eu eu lorem. Proin at diam et mauris euismod fermentum. Pellentesque elementum dui metus, quis facilisis dui condimentum eu.</p>
     <h1> Form </h1>
-    <p style="margin-bottom: 120px; ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id dui odio. In consectetur est lectus, a pellentesque nunc placerat ut. Etiam fringilla at quam eu molestie. Donec sodales ligula ornare aliquet fermentum. In bibendum fermentum felis, in iaculis diam facilisis vel. Donec non ante gravida nisl condimentum mattis eu eu lorem. Proin at diam et mauris euismod fermentum. Pellentesque elementum dui metus, quis facilisis dui condimentum eu.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id dui odio. In consectetur est lectus, a pellentesque nunc placerat ut. Etiam fringilla at quam eu molestie. Donec sodales ligula ornare aliquet fermentum. In bibendum fermentum felis, in iaculis diam facilisis vel. Donec non ante gravida nisl condimentum mattis eu eu lorem. Proin at diam et mauris euismod fermentum. Pellentesque elementum dui metus, quis facilisis dui condimentum eu.</p>
 
-    <div style="margin-bottom: 120px; " class="form-group">
-        <label for="exampleFormControlSelect1">Category Select</label>
-        <select class="form-control" id="exampleFormControlSelect1">
+    <div class="form-group">
+        <label for="example-form-control-select-1">Category Select</label>
+        <select class="form-control" id="example-form-control-select-1">
           <option>iOS Developer</option>
           <option>Scrub</option>
           <option>Scrub</option>
