--- a/interviews.html
+++ b/interviews.html
@@ -16,7 +16,7 @@
         <div  class="dropdown">
           <a  id="interviewslink" href="interviews.html" class="navlink">Interviews</a>
           <div class="dropdown-content">
-            <a id="interviewsFormlink" href="interviewsForm.html"> Quiz </a>
+            <a id="interviews-formlink" href="interviews-form.html"> Quiz </a>
             <a href="#">All Questions</a>
           </div>
         </div>
